--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Password generator</title>
 </head>
 <body>
-    <div id="user">
-        
-    </div>
+    <h1 id="user" >
+        Ciao
+    </h1>
     <script src="js/script.js" type="text/javascript"></script> 
 </body>
 </html>
